# UCB_Hackathon

./: .env  .env.example  .gitignore  README.md  api.md  db.sqlite3  encoded_files.txt  paperwork.md  pyproject.toml  realtor.md
app/: enums.py  formatters.py  main.py  pipeline.py  types.py  utils.py
app/dao/: FileDao.py  PackageDao.py
app/database/: Database.py  Storage.py  __init__.py  abstract.py  models.py
app/services/: GoogleformService.py  InstructorService.py  PackageService.py  PdfService.py  TypeformService.py  YoloService.py  client_secret.json  credentials.json  googleform_service.py
app/services/pipeline/: CreateStage.py  DedupeStage.py  DescriptionStage.py  YoloStage.py
app/services/pipelines/: DetectingStage.py  YoloStage.py
app/services/yolo_v8/: YOLOv8.py
app/utils/: uuid.py
docs/: api.md  demo.md  setup.md
fast_paperwork/services/: pdf_service.py
scripts/: clear_db.py  initialize.py
scripts/pdfs/: organize_raw.py  pdfs_to_images.py  scan_pdfs.py
scripts/scrapers/: nar_realtor.py  scrape_irs_forms.py
tests/: temp.py  temp2.py  test.py  test2.py  test_3.py
tests/test_api/: test_create_package_form.py  test_get_package.py  test_get_package_form.py  test_get_package_form_rows.py  test_get_package_rows.py  test_process_package.py
